--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 						<span>f</span>
 						<span>o</span>
 					</a>
-					<a href="https://drive.google.com/uc?export=download&id=1Bw0uoxGDmBzjEcC392U8u_z3WFqQMiAC" class="primary-btn" data-text="Resume">
+					<a href="https://doc-08-3o-docs.googleusercontent.com/docs/securesc/fhsu80gecd2dip732c5320md7pj891o9/lhl7g8ldeqki75cv0b5fqqdmqs8jphrh/1581424200000/12574136437685963328/12574136437685963328/1Z6Tc3wQ1lAKxvANWsOfzUf3TVvHAGVOQ?e=download&authuser=0" class="primary-btn" data-text="Resume">
 						<span>R</span>
 						<span>e</span>
 						<span>s</span>
