profile image change

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 					</a>
 				</div>
 				<div class="banner-img col-lg-6 col-md-6 align-self-end">
-					<img class="img-fluid" src="img/banner-image.png" alt="">
+					<img class="img-fluid" src="img/10.saiful.jpg" alt="">
 				</div>
 			</div>
 		</div>
