--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
 					<div class="me wow fadeInDown" data-wow-duration="1s" data-wow-delay="1.2s">It's me</div>
 					<h1 class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="1.7s">Md. Saiful Islam</h1>
 					<div class="designation mb-50 wow fadeInUp" data-wow-duration="1s" data-wow-delay="2.1s">
-						Software 
-						<span class="designer">Engineer</span>
+						Data 
+						<span class="designer">Scientist</span>
 						and <br>Full-Stack
 						<span class="developer">Web Developer</span>
 					</div>
@@ -166,9 +166,7 @@
 					</div>
 					<div class="mb-50 wow fadeIn" data-wow-duration=".8s">
 						<p>
-							Motivated Software Engineer seeking for position of 
-							a dynamic software development team. Focused and detail-oriented offering exceptional troubleshooting skills and a seeker for 
-							developing innovation solutions to unusual and difficult problems.
+							Innovative  and  self-motivated  engineer  with  significant  data  science  experience  to  bring  to  thetable.   Focused  and  detail-oriented,  offering  exceptional  troubleshooting  skills  and  a  seeker  fordeveloping innovative solutions to unusual and difficult problems and strives to build reusable toolsand solutions to achieve repeatable quality results.
 						</p>
 						<p>Strives to build reusable tools and solutions to achieve repeatable quality results.
 						</p>
