new version in one page

--- a/about.html
+++ b/about.html
@@ -99,22 +99,20 @@
 	</section>
 	<!-- End banner Area -->
 
-<!--Start education-->
-	
-	<div style="margin-left:80px;margin-top:100px;">
-		
-			<section class="colorlib-experience" data-section="experience">
-				<div class="colorlib-narrow-content">
-					<div class="row d-flex">
-						<div class="col-lg-12 animate-box" data-animate-effect="fadeInLeft">
-							<div class="section-title">
-								<h2>Education</h2>
+
+	<section class="job-area">
+		<div class="container"style="margin-top:100px;">
+			<div class="row d-flex">
+				<div class="col-lg-12 animate-box" data-animate-effect="fadeInLeft">
+					<div class="section-title">
+						<h2>Education</h2>
 						<!--<p>If you are looking at blank cassettes on the web, you may be very confused at the difference in price. You may see
 							some for as low as $.17 each.</p>-->
-						</div>
 					</div>
 				</div>
-					<div class="row">
+			</div>
+
+			<div class="row">
 						<div class="col-md-12">
 				         <div class="timeline-centered">
 					         <article class="timeline-entry animate-box" data-animate-effect="fadeInLeft">
@@ -125,7 +123,7 @@
 					               </div>
 
 					               <div class="timeline-label">
-					                  <h4>B.Sc. in Computer Science & Engineering <span>2015-2019</span></h4>
+					                  <h4>B.Sc. in Computer Science & Engineering || 2015-2019</h4>
 					                  <h6 style="color:#9F9FA2">Ahsanullah University of Science & Technology, Dhaka</h6>
 					               </div>
 					            </div>
@@ -133,24 +131,24 @@
 
 
 					         <article class="timeline-entry animate-box" data-animate-effect="fadeInRight">
-					            <div class="timeline-entry-inner">
+					            <div class="timeline-entry-inner" style="margin-top:20px;">
 					               <div class="timeline-icon color-2">
 					                  <i class="icon-pen2"></i>
 					               </div>
 					               <div class="timeline-label">
-					               	<h4>Higher Secondary Certificate (HSC)<span>2014</span></h4>
+					               	<h4>Higher Secondary Certificate (HSC) || 2014</h4>
 					                  <h6 style="color:#9F9FA2">National Ideal School & College, Dhaka</h6>
 					               </div>
 					            </div>
 					         </article>
 
 					         <article class="timeline-entry animate-box" data-animate-effect="fadeInLeft">
-					            <div class="timeline-entry-inner">
+					            <div class="timeline-entry-inner" style="margin-top:20px;">
 					               <div class="timeline-icon color-3">
 					                  <i class="icon-pen2"></i>
 					               </div>
 					               <div class="timeline-label">
-					               	<h4>Secondary School Certificate (SSC)<span>2012</span></h4>
+					               	<h4>Secondary School Certificate (SSC) || 2012</h4>
 					                  <h6 style="color:#9F9FA2">National Ideal School & College, Dhaka</h6>
 					               </div>
 					            </div>
@@ -189,52 +187,73 @@
 					      </div>
 					   </div>
 				   </div>
-				</div>
-			</section>
 
-		
-	</div>
-	
-	
+		</div>
+	</section>
 	
 	<!--End education-->
 	
 		<!-- Start Job History Area Area -->
 	<section class="job-area">
-		<div class="container">
+		<div class="container" style="margin-top:100px;">
 			<div class="row d-flex">
 				<div class="col-lg-12 animate-box" data-animate-effect="fadeInLeft">
 					<div class="section-title">
-						<h2>Job History</h2>
+						<h2>Experience</h2>
 						<!--<p>If you are looking at blank cassettes on the web, you may be very confused at the difference in price. You may see
 							some for as low as $.17 each.</p>-->
 					</div>
 				</div>
 			</div>
 
-			<div class="row">
+			<div class="row d-flex">
 				<div class="col-lg-6 animate-box">
 					<div class="single-job">
 						<div class="top-sec d-flex justify-content-between">
 							<div class="top-left">
-								<h4>Senior Web Developer</h4>
-								<p>5ssports, Dhaka, Bangladesh</p>
+							<a href="https://www.iritatech.com/"><h4>IRITA INFORMATION TECHONOLOGY LTD.</h4></a>	
+								<p>Assistant Programmer</p>
 							</div>
 							<div class="top-right">
-								<a href="#" class="primary-btn" data-text="Dec '18 to Present">
-									<span>D</span><span>e</span><span>c</span>
-									<span>'</span><span>1</span><span>8</span>
+								<a href="#" class="primary-btn" data-text="August, 2019 to February, 2020">
+									<span>August, 2019 to February, 2020</span>
+									<!-- <span>'</span><span>1</span><span>8</span>
 									<span>t</span><span>o</span>
-									<span>P</span><span>r</span><span>e</span><span>s</span><span>e</span><span>n</span><span>t</span>
+									<span>P</span><span>r</span><span>e</span><span>s</span><span>e</span><span>n</span><span>t</span> -->
 								</a>
 							</div>
 						</div>
 						<div class="bottom-sec wow fadeIn" data-wow-duration="2s">
-							Design and develop compelling UI and UX for web-based applications and contribute to ideas to maximize end-user adoption along with identification and implementation of productivity and collaboration solutions.
+							Involved in stages such as analysis and design, development, testing and debugging of a managementservice for Agro-related issues.  Developed the back-end web services using Flask, MongoDB andREST API.
 						</div>
 					</div>
 				</div>
+
+				<div class="col-lg-6 animate-box">
+					<div class="single-job">
+						<div class="top-sec d-flex justify-content-between">
+							<div class="top-left">
+							<a href="http://www.sair-bd.com/sairweb/"><h4>SAir AIR BD LTD.</h4></a>	
+								<p>Software Engineer</p>
+							</div>
+							<div class="top-right">
+								<a href="#" class="primary-btn" data-text="August, 2019 to February, 2020">
+									<span>August, 2019 to February, 2020</span>
+									<!-- <span>'</span><span>1</span><span>8</span>
+									<span>t</span><span>o</span>
+									<span>P</span><span>r</span><span>e</span><span>s</span><span>e</span><span>n</span><span>t</span> -->
+								</a>
+							</div>
+						</div>
+						<div class="bottom-sec wow fadeIn" data-wow-duration="2s">
+							Implementing facial recognition based employee attendance system, Data analysis of airlines throughGDS, ERP system development (account,  customer relation,  production materials),  OTA systemdeveloping using Django framework.
+						</div>
+					</div>
+				</div>
+
 			</div>
+
+
 		</div>
 	</section>
 	<!-- End Job Historyt Area Area -->
@@ -243,15 +262,15 @@
 	
 	<!--Start Freelancing-->
 	
-	<div style="margin-top:100px;">
+<!-- 	<div style="margin-top:100px;">
 		<div class="container">
 			<div class="row d-flex">
 				<div class="col-lg-12 animate-box" data-animate-effect="fadeInLeft">
 					<div class="section-title">
-						<h2>Freelancing Areas</h2>
+						<h2>Freelancing Areas</h2 -->>
 						<!--<p>If you are looking at blank cassettes on the web, you may be very confused at the difference in price. You may see
 							some for as low as $.17 each.</p>-->
-					</div>
+<!-- 					</div>
 				</div>
 			</div>
 
@@ -275,9 +294,9 @@
 					<div class="single-job">
 						<div class="top-sec d-flex justify-content-between">
 							<div class="top-left">
-								<h5>Graphics & Motion Designer</h5>
+								<h5>Graphics & Motion Designer</h5> -->
 								<!--<p>Graphics & Motion Designer</p>-->
-							</div>
+<!-- 							</div>
 							<div class="top-right">
 								<a href="#"><img class="mx-auto" src="img/brand/b2.png" alt=""></a>
 							</div>
@@ -290,9 +309,9 @@
 					<div class="single-job">
 						<div class="top-sec d-flex justify-content-between">
 							<div class="top-left">
-								<h5>UX/UI Designer</h5>
+								<h5>UX/UI Designer</h5> -->
 								<!--<p>Graphics & Motion Designer</p>-->
-							</div>
+<!-- 							</div>
 							<div class="top-right">
 								<a href="#"><img class="mx-auto" src="img/brand/b3.png" alt=""></a>
 							</div>
@@ -302,7 +321,7 @@
 			</div>
 		</div>
 		
-	</div>
+	</div> -->
 	<!--End Freelancing-->
 	
 
