--- a/portfolio-details_Al_bintum.html
+++ b/portfolio-details_Al_bintum.html
@@ -35,7 +35,7 @@
 <body>
 
 	<!-- Start Header Area -->
-	<header id="header" class="dark">
+	<!-- <header id="header" class="dark">
 		<div class="container main-menu">
 			<div class="row align-items-center d-flex">
 				<div id="logo">
@@ -64,7 +64,7 @@
 				</nav>
 			</div>
 		</div>
-	</header>
+	</header> -->
 	<!-- End Header Area -->
 
 	<!-- start banner Area -->
@@ -78,7 +78,7 @@
 					<p class="link-nav">
 						<span class="box">
 							<a href="index.html">Home </a>
-							<a href="portfolio.html">Portfolio</a>
+							<!-- <a href="portfolio.html">Portfolio</a> -->
 							<!--<a href="portfolio-details.html">Portfolio Details</a></p>-->
 					</span>
 				</div>
@@ -94,25 +94,22 @@
 				<div class="row">
 					<div class="col-md-6">
 						<div class="left_img">
-							<figure>
-							<img style="border: 10px solid #EEE; margin-left:20px;" src="img/project/w6.jpg" class="enlarge" width="600" />	
-							<!--<img style="border: 10px solid #EEE;" width="100" src="img/project/w6.jpg" class=".enlarge" alt="">-->
-						    <figcaption  style="margin-left:238px">Fig : TSCS Collaboration System</figcaption>
+							<figure>	
+							<img style="border: 10px solid #EEE; margin-left:20px;" width="600" src="img/project/w1.png" class="enlarge" alt="">
+						    <figcaption  style="margin-left:238px">Fig : ERD of Management System</figcaption>
 							</figure>
 						</div>
 					</div>
-					<div style="margin-left:95px;"class="offset-md-1 col-md-5">
+					<div class="offset-md-1 col-md-5">
 						<div class="portfolio_right_text mt-30">
-							<h4>Teacher - Student Collaboration System</h4>
-							<p>A <em><b>communicating System</b></em> between student & teacher. Main reason behind this project is maintaining a secure not depend on third party like google classroom where they able to crate courses and share materials.
-							Student can easily attend the course and get files but full control will be at course teacher point. 
-							</p>
+							<h4>Al-Bintum Super Shop Management</h4>
+							<p>Its a <em>Distributed Database Management System</em>. Main part of it is segmenting a store branches with the best outcome and necessity.</p>
 							<ul class="list">
 								<!--<li><span>Rating</span>: <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i
 									 class="fa fa-star"></i></li>
 								<li><span>Client</span>: colorlib</li>
 								<li><span>Website</span>: colorlib.com</li>-->
-								<li><b>Used Tools : C#, ASP.NET MVC, Visual Studio</b></li>
+								<li><b>Used Tools : Oracle 10g XE, Pl/SQL</b></li>
 							</ul>
 							<!--<ul class="list social_details">
 								<li><a href="#"><i class="fa fa-facebook"></i></a></li>
@@ -200,19 +197,19 @@
 							<h4>Follow Me</h4>
 						</div>
 						<div class="footer-social">
-							<a href="#"><i class="fa fa-facebook"></i></a>
-							<a href="#"><i class="fa fa-twitter"></i></a>
-							<a href="#"><i class="fa fa-dribbble"></i></a>
-							<a href="#"><i class="fa fa-behance"></i></a>
+							<a href="https://www.linkedin.com/in/saiful-somum/"><i class="fa fa-linkedin"></i></a>
+							<a href="https://github.com/somum"><i class="fa fa-github"></i></a>
+							<a href="https://twitter.com/saiful_somum"><i class="fa fa-twitter"></i></a>
+							<a href="https://www.facebook.com/m.somum/"><i class="fa fa-facebook"></i></a>
 						</div>
 					</div>
 				</div>
 			</div>
 			<div class="row footer-bottom justify-content-center">
 				<p class="col-lg-8 col-sm-12 footer-text">
-					
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | Designed by <a href="#" target="_blank">somum</a>
-</p>
+					<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved
+<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
 			</div>
 		</div>
 	</footer>
