--- a/index.html
+++ b/index.html
@@ -201,6 +201,7 @@
 			</div>
 
 			<div class="row d-flex">
+				<!-- for bjet 
 				<div class="col-lg-6 animate-box">
 					<div class="single-job">
 						<div class="top-sec d-flex justify-content-between">
@@ -222,7 +223,7 @@
 						</div>
 					</div>
 				</div>
-
+				-->
 				<div class="col-lg-6 animate-box">
 					<div class="single-job" style="padding-bottom:70px">
 						<div class="top-sec d-flex justify-content-between">
