--- a/index.html
+++ b/index.html
@@ -212,9 +212,6 @@
 							<div class="top-right">
 								<a href="#" class="primary-btn" data-text="October, 2020 to December, 2020" style="padding: 5px;">
 									<span>October, 2020 to December, 2020</span>
-									<!-- <span>'</span><span>1</span><span>8</span>
-									<span>t</span><span>o</span>
-									<span>P</span><span>r</span><span>e</span><span>s</span><span>e</span><span>n</span><span>t</span> -->
 								</a>
 							</div>
 						</div>
@@ -222,8 +219,8 @@
 							Involved in stages such as analysis and design, development, testing and debugging of a managementservice for Agro-related issues.  Developed the back-end web services using Flask, MongoDB and REST API.
 						</div>
 					</div>
-				</div>
-				-->
+				</div>-->
+				
 				<div class="col-lg-6 animate-box">
 					<div class="single-job" style="padding-bottom:70px">
 						<div class="top-sec d-flex justify-content-between">
