--- a/index.html
+++ b/index.html
@@ -173,7 +173,8 @@
 						<span>f</span>
 						<span>o</span>
 					</a> -->
-					<a href="./files/Md_Saiful_Islam_Resume.pdf" class="primary-btn white" data-text="Resume">
+					<!--<a href="./files/Md_Saiful_Islam_Resume.pdf" class="primary-btn white" data-text="Resume">-->
+					<a href="" class="primary-btn white" data-text="Resume">	
 						<span>R</span>
 						<span>e</span>
 						<span>s</span>
