--- a/index.html
+++ b/index.html
@@ -189,19 +189,19 @@
 
 
 			<!-- Start Job History Area Area -->
-	<section class="job-area" id="experience">
+<!-- 	<section class="job-area" id="experience">
 		<div class="container" style="margin-top:100px;">
 			<div class="row d-flex">
 				<div class="col-lg-12 animate-box" data-animate-effect="fadeInLeft">
 					<div class="section-title">
-						<h2>Experience</h2>
+						<h2>Experience</h2> -->
 						<!--<p>If you are looking at blank cassettes on the web, you may be very confused at the difference in price. You may see
 							some for as low as $.17 each.</p>-->
-					</div>
+<!-- 					</div>
 				</div>
 			</div>
 
-			<div class="row d-flex">
+			<div class="row d-flex"> -->
 				<!-- for bjet 
 				<div class="col-lg-6 animate-box">
 					<div class="single-job">
@@ -222,7 +222,7 @@
 					</div>
 				</div>-->
 				
-				<div class="col-lg-6 animate-box">
+<!-- 				<div class="col-lg-6 animate-box">
 					<div class="single-job" style="padding-bottom:70px">
 						<div class="top-sec d-flex justify-content-between">
 							<div class="top-left">
@@ -231,11 +231,11 @@
 							</div>
 							<div class="top-right">
 								<a href="#" class="primary-btn" data-text="August, 2019 to February, 2020">
-									<span>August, 2019 to February, 2020</span>
+									<span>August, 2019 to February, 2020</span> -->
 									<!-- <span>'</span><span>1</span><span>8</span>
 									<span>t</span><span>o</span>
 									<span>P</span><span>r</span><span>e</span><span>s</span><span>e</span><span>n</span><span>t</span> -->
-								</a>
+<!-- 								</a>
 							</div>
 						</div>
 						<div class="bottom-sec wow fadeIn" data-wow-duration="2s">
@@ -248,7 +248,7 @@
 
 
 		</div>
-	</section>
+	</section> -->
 
 
 	<!-- End About Area -->
