--- a/index.html
+++ b/index.html
@@ -189,160 +189,170 @@
 
 
 			<!-- Start Job History Area Area -->
-<!-- 	<section class="job-area" id="experience">
-		<div class="container" style="margin-top:100px;">
-			<div class="row d-flex">
-				<div class="col-lg-12 animate-box" data-animate-effect="fadeInLeft">
-					<div class="section-title">
-						<h2>Experience</h2> -->
-						<!--<p>If you are looking at blank cassettes on the web, you may be very confused at the difference in price. You may see
-							some for as low as $.17 each.</p>-->
-<!-- 					</div>
-				</div>
-			</div>
-
-			<div class="row d-flex"> -->
-				<!-- for bjet 
-				<div class="col-lg-6 animate-box">
-					<div class="single-job">
-						<div class="top-sec d-flex justify-content-between">
-							<div class="top-left">
-							<a href="https://www.iritatech.com/"><h4>IRITA INFORMATION TECHONOLOGY LTD.</h4></a>	
-								<p>Assistant Programmer</p>
+			<section class="job-area" id="experience">
+				<div class="container">
+					<div class="row d-flex">
+						<div class="col-lg-12 animate-box" data-animate-effect="fadeInLeft">
+							<div class="section-title">
+								<h2>Experience</h2>
+								<!--<p>If you are looking at blank cassettes on the web, you may be very confused at the difference in price. You may see
+									some for as low as $.17 each.</p>-->
 							</div>
-							<div class="top-right">
-								<a href="#" class="primary-btn" data-text="October, 2020 to December, 2020" style="padding: 5px;">
-									<span>October, 2020 to December, 2020</span>
-								</a>
-							</div>
-						</div>
-						<div class="bottom-sec wow fadeIn" data-wow-duration="2s">
-							Involved in stages such as analysis and design, development, testing and debugging of a managementservice for Agro-related issues.  Developed the back-end web services using Flask, MongoDB and REST API.
 						</div>
 					</div>
-				</div>-->
-				
-<!-- 				<div class="col-lg-6 animate-box">
-					<div class="single-job" style="padding-bottom:70px">
-						<div class="top-sec d-flex justify-content-between">
-							<div class="top-left">
-							<a href="http://www.sair-bd.com/sairweb/"><h4>SAir AIR BD LTD.</h4></a>	
-								<p>Software Engineer</p>
+					<div class="row">
+						<div class="col-md-12">
+							<div class="timeline">
+			
+								<!-- Mass Holdings Company Limited - AI Engineer (Level -2) -->
+								<!-- Artificial Intelligence Engineer (Level -2) -->
+								<div class="timeline-entry">
+									<div class="timeline-icon">
+										<i class="icon-pen2"></i>
+									</div>
+									<div class="timeline-label">
+										<h4>Artificial Intelligence Engineer (Level -2)</h4>
+										<p class="timeline-date">Dec 2020 - Present</p>
+										<p class="timeline-company"><strong> Holdings Company Limited, Tokyo, Japan</strong></p>
+										<p class="timeline-description">
+											As a Software Engineer (Artificial Intelligence) at Mass Holdings Company Limited, based in Tokyo, Japan, I successfully implemented an efficient sales forecasting system for our warehouse and created two innovative AI-based solutions. The first solution enables real-time hair color simulation, allowing users to preview different colors. The second solution utilizes deep learning for a product search feature based on uploaded images. These achievements highlight my expertise in using AI to solve complex problems and drive business growth. 
+											<br>Currently, developing an advanced Hair Style Generator program using generative AI technology (StyleGAN 2).
+										</p>
+										<p class="timeline-skills">
+											<strong>Skills:</strong> Angular · Machine Learning · Computer Vision · Deep Learning · Python · TensorFlow · Flask · MySQL · React.js · PyTorch
+										</p>
+									</div>
+								</div>
+								<hr class="timeline-separator">
+			
+								<!-- AI Intern -->
+								<div class="timeline-entry">
+									<div class="timeline-icon">
+										<i class="icon-pen2"></i>
+									</div>
+									<div class="timeline-label">
+										<h4>AI Intern</h4>
+										<p class="timeline-date">Sep 2020 - Nov 2020 · 3 mos</p>
+										<p class="timeline-company"><strong>ULTRA-X BD LIMITED, Remote</strong></p>
+										<p class="timeline-description">
+											At my first Japanese company, I served as the team leader for a group of 5 individuals. We were responsible for developing a "Speech to Text" conversion program using the Kaldi Automatic Speech Recognition (ASR) system.
+										</p>
+										<p class="timeline-skills">
+											<strong>Skills:</strong> Kaldi · Vosk · ASR
+										</p>
+									</div>
+								</div>
+								<hr class="timeline-separator">
+			
+								<!-- Trainee at B-JET -->
+								<div class="timeline-entry">
+									<div class="timeline-icon">
+										<i class="icon-pen2"></i>
+									</div>
+									<div class="timeline-label">
+										<h4>Trainee</h4>
+										<p class="timeline-date">Feb 2020 - Jul 2020 · 6 mos</p>
+										<p class="timeline-company"><strong>B-JET</strong>( <a href="https://www.jica.go.jp/bangladesh/bangland/b-jet.html">Bangladesh-Japan ICT Engineers' Training Program</a>)  , Dhaka, Bangladesh</p>
+
+										<p class="timeline-skills">
+											<strong>Skills:</strong> ITEE · Japanese Language Proficiency Test · Java
+										</p>
+									</div>
+								</div>
+								<hr class="timeline-separator">
+			
+								<!-- Software Engineer at SAIR AIR BD LTD -->
+								<div class="timeline-entry">
+									<div class="timeline-icon">
+										<i class="icon-pen2"></i>
+									</div>
+									<div class="timeline-label">
+										<h4>Software Engineer</h4>
+										<p class="timeline-date">Aug 2019 - Feb 2020 · 7 mos</p>
+										<p class="timeline-company"><strong>SAIR AIR BD LTD, Dhaka, Bangladesh</strong> </p>
+										<p class="timeline-description">
+											I was responsible for conducting data analysis on airlines using Global Distribution Systems (GDS) and developing ERP systems for managing accounts, customer relations, and production materials. Additionally, I deployed a company website, including a visa processing unit using the Django framework, and built a fully functional online travel agency (OTA) system that allowed users to search for flight details using the Django framework, which included API integration.
+										</p>
+										<p class="timeline-skills">
+											<strong>Skills:</strong> jQuery · MySQL · Django · PHP
+										</p>
+									</div>
+								</div>
+			
+								<!-- ... You can continue adding more job entries here ... -->
+			
 							</div>
-							<div class="top-right">
-								<a href="#" class="primary-btn" data-text="August, 2019 to February, 2020">
-									<span>August, 2019 to February, 2020</span> -->
-									<!-- <span>'</span><span>1</span><span>8</span>
-									<span>t</span><span>o</span>
-									<span>P</span><span>r</span><span>e</span><span>s</span><span>e</span><span>n</span><span>t</span> -->
-<!-- 								</a>
-							</div>
-						</div>
-						<div class="bottom-sec wow fadeIn" data-wow-duration="2s">
-							Implementing facial recognition based employee attendance system, Data analysis of airlines throughGDS, ERP system development (account,  customer relation,  production materials),  OTA system developing using Django framework.
 						</div>
 					</div>
 				</div>
-
-			</div>
-
-
-		</div>
-	</section> -->
+			</section>
+			
 
 
 	<!-- End About Area -->
 
-		<section class="job-area" id="education">
-		<div class="container"style="margin-top:100px;  margin-bottom:100px;">
+	<section class="job-area" id="education">
+		<div class="container" style="margin-top: 100px; margin-bottom: 100px;">
 			<div class="row d-flex">
 				<div class="col-lg-12 animate-box" data-animate-effect="fadeInLeft">
 					<div class="section-title">
 						<h2>Education</h2>
-						<!--<p>If you are looking at blank cassettes on the web, you may be very confused at the difference in price. You may see
-							some for as low as $.17 each.</p>-->
 					</div>
 				</div>
 			</div>
-
 			<div class="row">
-						<div class="col-md-12">
-				         <div class="timeline-centered">
-					         <article class="timeline-entry animate-box" data-animate-effect="fadeInLeft">
-					            <div class="timeline-entry-inner">
-
-					               <div class="timeline-icon color-1">
-					                  <i class="icon-pen2"></i>
-					               </div>
-
-					               <div class="timeline-label">
-					                  <h4>B.Sc. in Computer Science & Engineering || 2015-2019</h4>
-					                  <h6 style="color:#9F9FA2">Ahsanullah University of Science & Technology, Dhaka</h6>
-					               </div>
-					            </div>
-					         </article>
-
-
-					         <article class="timeline-entry animate-box" data-animate-effect="fadeInRight">
-					            <div class="timeline-entry-inner" style="margin-top:20px;">
-					               <div class="timeline-icon color-2">
-					                  <i class="icon-pen2"></i>
-					               </div>
-					               <div class="timeline-label">
-					               	<h4>Higher Secondary Certificate (HSC) || 2014</h4>
-					                  <h6 style="color:#9F9FA2">National Ideal School & College, Dhaka</h6>
-					               </div>
-					            </div>
-					         </article>
-
-					         <article class="timeline-entry animate-box" data-animate-effect="fadeInLeft">
-					            <div class="timeline-entry-inner" style="margin-top:20px;">
-					               <div class="timeline-icon color-3">
-					                  <i class="icon-pen2"></i>
-					               </div>
-					               <div class="timeline-label">
-					               	<h4>Secondary School Certificate (SSC) || 2012</h4>
-					                  <h6 style="color:#9F9FA2">National Ideal School & College, Dhaka</h6>
-					               </div>
-					            </div>
-					         </article>
-
-					         <!--<article class="timeline-entry animate-box" data-animate-effect="fadeInTop">
-					            <div class="timeline-entry-inner">
-					               <div class="timeline-icon color-4">
-					                  <i class="icon-pen2"></i>
-					               </div>
-					               <div class="timeline-label">
-					               	<h2><a href="#">Creative Designer</a> <span>2017-2018</span></h2>
-					                  <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
-					               </div>
-					            </div>
-					         </article>
-
-					         <article class="timeline-entry animate-box" data-animate-effect="fadeInLeft">
-					            <div class="timeline-entry-inner">
-					               <div class="timeline-icon color-5">
-					                  <i class="icon-pen2"></i>
-					               </div>
-					               <div class="timeline-label">
-					               	<h2><a href="#">UI/UX Designer at Envato</a> <span>2017-2018</span></h2>
-					                  <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
-					               </div>
-					            </div>
-					         </article>-->
-
-					         <article class="timeline-entry begin animate-box" data-animate-effect="fadeInBottom">
-					            <div class="timeline-entry-inner">
-					               <div class="timeline-icon color-none">
-					               </div>
-					            </div>
-					         </article>
-					      </div>
-					   </div>
-				   </div>
-
+				<div class="col-md-12">
+					<div class="timeline-centered">
+						<!-- B.Sc. in Computer Science & Engineering -->
+						<article class="timeline-entry animate-box" data-animate-effect="fadeInLeft">
+							<div class="timeline-entry-inner">
+								<div class="timeline-icon color-1">
+									<i class="icon-pen2"></i>
+								</div>
+								<div class="timeline-label">
+									<h4>B.Sc. in Computer Science & Engineering</h4>
+									<h6 style="color:#9F9FA2">2015 - 2019</h6>
+									<p>Ahsanullah University of Science & Technology, Dhaka</p>
+								</div>
+							</div>
+						</article>
+						<hr class="timeline-separator">
+	
+						<!-- Higher Secondary Certificate (HSC) -->
+						<article class="timeline-entry animate-box" data-animate-effect="fadeInRight">
+							<div class="timeline-entry-inner" style="margin-top:20px;">
+								<div class="timeline-icon color-2">
+									<i class="icon-pen2"></i>
+								</div>
+								<div class="timeline-label">
+									<h4>Higher Secondary Certificate (HSC)</h4>
+									<h6 style="color:#9F9FA2">2012 - 2014</h6>
+									<p>National Ideal School & College, Dhaka</p>
+								</div>
+							</div>
+						</article>
+						<hr class="timeline-separator">
+	
+						<!-- Secondary School Certificate (SSC) -->
+						<article class="timeline-entry animate-box" data-animate-effect="fadeInLeft">
+							<div class="timeline-entry-inner" style="margin-top:20px;">
+								<div class="timeline-icon color-3">
+									<i class="icon-pen2"></i>
+								</div>
+								<div class="timeline-label">
+									<h4>Secondary School Certificate (SSC)</h4>
+									<h6 style="color:#9F9FA2">2001 - 2012</h6>
+									<p>National Ideal School & College, Dhaka</p>
+								</div>
+							</div>
+						</article>
+						<hr class="timeline-separator">
+					</div>
+				</div>
+			</div>
 		</div>
 	</section>
+	
 	
 	<!--End education-->
 
@@ -403,11 +413,11 @@
 					<div class="single-job">
 						<div class="top-sec d-flex justify-content-between">
 							<div class="top-left">
-								<span><img style="max-width: 15px;" src="./img/benchmark.png"></span><span style="font-weight: bold;">Chapter (Accepted)</span>
+								<span><img style="max-width: 15px;" src="./img/benchmark.png"></span><span style="font-weight: bold;">Chapter</span>
 								<h5 style="margin-top: 5px;">"Deep Learning Based Industrial Fault Diagnosis Using Induction Motor Bearing Signal”</h5>
 								<p>IGI Book project: Applied AI for Multimedia Technologies and CPS Applications.</p>
 
-								<p>Read details: <a href="https://drive.google.com/file/d/1peel6lzGusiLIjNItHhTiJLHT9g4mQXz/view?usp=sharing">Pre-publish document</a></p>
+								<p>Read details: <a href="https://scholar.google.com/scholar?oi=bibs&cluster=14902942165659984902&btnI=1&hl=en">IGI Link</a></p>
 							</div>
 							<!-- <div class="top-right">
 								<a href="#"><img class="mx-auto" src="img/brand/b4.png" alt=""></a>
@@ -432,7 +442,7 @@
 			<div class="row d-flex justify-content-between align-items-end mb-80">
 				<div class="col-lg-6 animate-box" data-animate-effect="fadeInLeft">
 					<div class="section-title">
-						<h2>Latest Works</h2>
+						<h2>Works</h2>
 						<!--<p>If you are looking at blank cassettes on the web, you may be very confused at the difference in price. You may see
 							some for as low as $.17 each.</p>-->
 					</div>
@@ -443,7 +453,7 @@
 						<ul>
 							<li class="active" data-filter=".all">All Categories</li>
 							<li data-filter=".web">Web based</li>
-							<li data-filter=".data_science">Data Science</li>
+							<li data-filter=".data_science">Data Science (ML)</li>
 							<li data-filter=".android">Android</li>
 							<li data-filter=".offline">offline</li>
 						</ul>
@@ -468,17 +478,19 @@
 					</div>
 					<div class="single-work col-lg-4 col-md-6 col-sm-12 all data_science wow fadeInUp" data-wow-duration="1s">
 						<div class="relative">
-							<div class="thumb">
-								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="img/work/w5_main.png" alt="">
-							</div>
-							<div class="middle">
-								<h4>Deep learning based<br>simulation</h4>
-
-							</div>
-							<a class="overlay" href="portfolio-details_hair_simulation.html"></a>
+						  <div class="thumb">
+							<div class="overlay overlay-bg"></div>
+							<img class="image img-fluid" src="img/hair-color-video-thumbnail.png" alt="Hair Color Simulation Thumbnail">
+						  </div>
+						  <div class="middle">
+							<h4>Hair Color Simulation</h4>
+						  </div>
+						  <a class="overlay" href="portfolio-details_hair_simulation.html"></a>
+						  <div class="project-name-banner text-center">
+							<h5 style="font-size: 18px;">Hair Color Simulation</h5>
+						  </div>
 						</div>
-					</div>
+					  </div>
 					<div class="single-work col-lg-4 col-md-6 col-sm-12 all data_science wow fadeInUp" data-wow-duration="1s">
 						<div class="relative">
 							<div class="thumb">
