updated brand section

--- a/index.html
+++ b/index.html
@@ -92,16 +92,14 @@
 	<!-- start banner Area -->
 	<section class="home-banner-area">
 		<div class="container">
-			<div class="row fullscreen d-flex align-items-center">
-				<div class="banner-content col-lg-6 col-md-12 justify-content-center ">
-					<div class="me wow fadeInDown" data-wow-duration="1s" data-wow-delay="1.2s">Hello !</div>
-					<h1 class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="1.7s">Md. Saiful Islam</h1>
-					<div class="designation mb-50 wow fadeInUp" data-wow-duration="1s" data-wow-delay="2.1s">
-						Data 
-						<span class="designer">Scientist</span>
-						and <br>Full-Stack
-						<span class="developer">Web Developer</span>
+			<div class="row d-flex align-items-center" style="height: 500px;">
+				<div class="banner-content col-lg-6 col-md-12 justify-content-center">
+					<h1 class="wow fadeInUp" data-wow-duration="0.2s" data-wow-delay="0.2s">Md. Saiful Islam</h1>
+					<div class="designation mb-50 wow fadeInUp" data-wow-duration="0.2s" data-wow-delay="0.2s" style="white-space: nowrap;">
+						AI Engineer
+					</br><span class="designer"><a href="https://www.mass-hd.com/"></a> Mass Holdings Company, Ltd.</span>
 					</div>
+
 					<a href="#" class="primary-btn" data-text="Hire Me">
 						<span>H</span>
 						<span>i</span>
@@ -113,11 +111,12 @@
 					</a>
 				</div>
 				<div class="banner-img col-lg-6 col-md-6 align-self-end">
-					<img class="img-fluid" src="img/10.saiful.jpg" alt="">
+					<img class="img-fluid" src="img/10.saiful.jpg" alt="" style="max-width: 50%;">
 				</div>
 			</div>
 		</div>
 	</section>
+	
 	<!-- End banner Area -->
 
 
@@ -125,17 +124,20 @@
 	<section class="brands-area">
 		<div class="container">
 			<div class="brand-wrap" style="padding: 30px 14px; margin-top:-32px;">
-				<div class="row align-items-center active-brand-carusel justify-content-start no-gutters">
-<!-- 
-					<div class="col single-brand">
-						<a href="#"><img class="mx-auto" src="img/brand/b2.png" alt=""></a>
+				<div class="row align-items-center justify-content-start no-gutters">
+
+					<div class="col">
+						<a href="https://scholar.google.com/citations?hl=en&user=fwoac0YAAAAJ"><img class="mx-auto" src="img/brand/google-scolar.jpg" alt="" style="padding-left: 5%; max-width: 50%;"></a>
 					</div>
-					<div class="col single-brand">
-						<a href="#"><img class="mx-auto" src="img/brand/b1.png" alt=""></a>
+					<div class="col">
+						<a href="https://www.linkedin.com/in/saiful-somum/"><img class="mx-auto" src="img/brand/b1.png" alt="linkedin" style="max-width: 50%; padding-top: 5%;"></a>
 					</div>
-					<div class="col single-brand">
-						<a href="#"><img class="mx-auto" src="img/brand/b4.png" alt=""></a>
-					</div> -->
+					<div class="col">
+						<a href="https://github.com/somum"><img class="mx-auto" src="img/brand/b2.png" alt="github" style="max-width: 50%; padding-top: 5%;"></a>
+					</div>
+					<div class="col">
+						<a href="https://www.hackerrank.com/saiful_somum"><img class="mx-auto" src="img/brand/b3.png" alt="hackerRank" style="max-width: 70%; padding-top: 5%;"></a>
+					</div>
 
 				</div>
 			</div>
@@ -148,31 +150,23 @@
 	<section class="about-area section-gap">
 		<div class="container">
 			<div class="row align-items-center justify-content-between">
-				<div class="col-lg-4 about-left">
-					<img class="img-fluid" src="img/about-img.png" alt="">
-				</div>
-				<div class="col-lg-5 col-md-12 about-right animate-box" data-animate-effect="fadeInLeft">
 					<div class="section-title">
 						<h2>Career Objective</h2>
 					</div>
 					<div class="mb-50 wow fadeIn" data-wow-duration=".8s">
-						<p>
-							Innovative  and  self-motivated  engineer  with  significant  data  science  experience  to  bring  to  the table.   Focused  and  detail-oriented,  offering  exceptional  troubleshooting  skills  and  a  seeker  fordeveloping innovative solutions to unusual and difficult problems and strives to build reusable toolsand solutions to achieve repeatable quality results.
-						</p>
-						<p>Strives to build reusable tools and solutions to achieve repeatable quality results.
-						</p>
+
+						<p>A highly skilled and experienced <strong>Software Engineer</strong> with a focus on <strong>Artificial Intelligence (AI)</strong>. I have a strong background in developing AI-based projects and have a proven track record of success in both Japan and Bangladesh.</p>
+
+						<p>Currently employed as an <strong>AI Software Engineer</strong> at <a href="https://www.mass-hd.com/"><strong>Mass Holdings Company Limited</strong></a> in Tokyo, Japan. My primary focus is on developing a <strong>Hairstyle Generator</strong> using <strong>GAN technology</strong>, which has proven to be both challenging and fulfilling. During my time at the company, I have successfully completed three AI-based projects. One of these projects involved creating a real-time hair color simulation, while another focused on product demand forecasting in the warehouse. Additionally, I developed a deep learning-based system for product search using image recognition.</p>
+
+						<p>Prior to my current role, I served as an <strong>Intern (AI)</strong> at <a href="https://www.uxd.co.jp/"><strong>ULTRA-X BD LIMITED</strong></a>, where I served as the team leader for a group of 5 individuals. Our team was responsible for developing a "Speech to Text" conversion program using the <strong>Kaldi Automatic Speech Recognition (ASR) system</strong>.</p>
+
+						<p>In my previous role at <strong>SAir AIR BD LTD.</strong> (GSA of Himalaya Airlines) (<a href="http://www.sairbd.com"><strong>www.sairbd.com</strong></a>), I was responsible for conducting data analysis on airlines using <strong>Global Distribution Systems (GDS)</strong> and developing <strong>ERP systems</strong> for managing accounts, customer relations, and production materials. Additionally, I deployed a company website, including a visa processing unit using the <strong>Django framework</strong>, and built a fully functional <strong>online travel agency (OTA) system</strong> that allowed users to search for flight details using the Django framework, which included <strong>API integration</strong>.</p>
+
+						<p>With my extensive experience in software engineering and AI, I am confident in my ability to deliver successful projects and am excited to continue to grow and develop my skills in the field.</p>
+
 					</div>
-					<!-- <a href="about.html" class="primary-btn white" data-text="More Info">
-						<span>M</span>
-						<span>o</span>
-						<span>r</span>
-						<span>e</span>
-						<span> </span>
-						<span>I</span>
-						<span>n</span>
-						<span>f</span>
-						<span>o</span>
-					</a> -->
+				
 					<!--<a href="./files/Md_Saiful_Islam_Resume.pdf" class="primary-btn white" data-text="Resume">-->
 					<a href="" class="primary-btn white" data-text="Resume">	
 						<span>R</span>
@@ -182,7 +176,7 @@
 						<span>m</span>
 						<span>e</span>
 					</a>
-				</div>
+			
 			</div>
 		</div>
 	</section>
@@ -213,7 +207,7 @@
 									<div class="timeline-label">
 										<h4>Artificial Intelligence Engineer (Level -2)</h4>
 										<p class="timeline-date">Dec 2020 - Present</p>
-										<p class="timeline-company"><strong> Holdings Company Limited, Tokyo, Japan</strong></p>
+										<p class="timeline-company"><strong> Mass Holdings Company Limited, Tokyo, Japan</strong></p>
 										<p class="timeline-description">
 											As a Software Engineer (Artificial Intelligence) at Mass Holdings Company Limited, based in Tokyo, Japan, I successfully implemented an efficient sales forecasting system for our warehouse and created two innovative AI-based solutions. The first solution enables real-time hair color simulation, allowing users to preview different colors. The second solution utilizes deep learning for a product search feature based on uploaded images. These achievements highlight my expertise in using AI to solve complex problems and drive business growth. 
 											<br>Currently, developing an advanced Hair Style Generator program using generative AI technology (StyleGAN 2).
