added medium brand

--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
 				<nav id="nav-menu-container">
 					<ul class="nav-menu">
 						<li class=""><a class="active" href="index.html">Home</a></li>
+						<li><a href="#experience">Experience</a></li>
 						<li><a href="#education">Education</a></li>
 						<li><a href="#publications">Publications</a></li>
 						<li><a href="#work">Latest Works</a></li>
@@ -124,19 +125,22 @@
 	<section class="brands-area">
 		<div class="container">
 			<div class="brand-wrap" style="padding: 30px 14px; margin-top:-32px;">
-				<div class="row align-items-center justify-content-start no-gutters">
+				<div class="row align-items-center active-brand-carusel justify-content-start no-gutters">
 
 					<div class="col">
-						<a href="https://scholar.google.com/citations?hl=en&user=fwoac0YAAAAJ"><img class="mx-auto" src="img/brand/google-scolar.jpg" alt="" style="padding-left: 5%; max-width: 50%;"></a>
+						<a href="https://scholar.google.com/citations?hl=en&user=fwoac0YAAAAJ"><img class="mx-auto" src="img/brand/google-scolar.jpg" alt="" style="padding-left: 5%; max-width: 60%;"></a>
 					</div>
 					<div class="col">
-						<a href="https://www.linkedin.com/in/saiful-somum/"><img class="mx-auto" src="img/brand/b1.png" alt="linkedin" style="max-width: 50%; padding-top: 5%;"></a>
+						<a href="https://www.linkedin.com/in/saiful-somum/"><img class="mx-auto" src="img/brand/b1.png" alt="linkedin" style="max-width: 60%; padding-top: 5%;"></a>
 					</div>
 					<div class="col">
-						<a href="https://github.com/somum"><img class="mx-auto" src="img/brand/b2.png" alt="github" style="max-width: 50%; padding-top: 5%;"></a>
+						<a href="https://github.com/somum"><img class="mx-auto" src="img/brand/b2.png" alt="github" style="max-width: 60%; padding-top: 5%;"></a>
 					</div>
 					<div class="col">
-						<a href="https://www.hackerrank.com/saiful_somum"><img class="mx-auto" src="img/brand/b3.png" alt="hackerRank" style="max-width: 70%; padding-top: 5%;"></a>
+						<a href="https://medium.com/@saiful.somum/real-time-hair-color-simulation-c5441d5dcd8c"><img class="mx-auto" src="img/brand/b4.png" alt="medium" style="max-width: 70%; padding-top: 14%;"></a>
+					</div>
+					<div class="col">
+						<a href="https://www.hackerrank.com/saiful_somum"><img class="mx-auto" src="img/brand/b3.png" alt="hackerRank" style="max-width: 80%; padding-top: 12%;"></a>
 					</div>
 
 				</div>
@@ -147,7 +151,7 @@
 
 
 	<!-- Start About Area -->
-	<section class="about-area section-gap">
+	<section class="about-area section-gap" >
 		<div class="container">
 			<div class="row align-items-center justify-content-between">
 					<div class="section-title">
@@ -155,9 +159,9 @@
 					</div>
 					<div class="mb-50 wow fadeIn" data-wow-duration=".8s">
 
-						<p>A highly skilled and experienced <strong>Software Engineer</strong> with a focus on <strong>Artificial Intelligence (AI)</strong>. I have a strong background in developing AI-based projects and have a proven track record of success in both Japan and Bangladesh.</p>
+						<p>I am a highly skilled and experienced <strong>Software Engineer</strong> with a focus on <strong>Artificial Intelligence (AI)</strong>. I have a strong background in developing AI-based projects and have a proven track record of success in both Japan and Bangladesh.</p>
 
-						<p>Currently employed as an <strong>AI Software Engineer</strong> at <a href="https://www.mass-hd.com/"><strong>Mass Holdings Company Limited</strong></a> in Tokyo, Japan. My primary focus is on developing a <strong>Hairstyle Generator</strong> using <strong>GAN technology</strong>, which has proven to be both challenging and fulfilling. During my time at the company, I have successfully completed three AI-based projects. One of these projects involved creating a real-time hair color simulation, while another focused on product demand forecasting in the warehouse. Additionally, I developed a deep learning-based system for product search using image recognition.</p>
+						<p>Currently employed as an <strong>AI Software Engineer</strong> at <a href="https://www.mass-hd.com/"><strong>Mass Holdings Company Limited</strong></a> in Tokyo, Japan. My primary focus is on developing a <strong>Hairstyle Generator</strong> using <strong>GAN technology</strong>, which has proven to be both challenging and fulfilling. During my time at the company, I have successfully completed three AI-based projects. One of these projects involved creating a <strong> Real-time hair color simulation</strong> with <strong>U-NET</strong> based Pretrained model <strong>MobileNetV3</strong>, while another focused on product demand forecasting in the warehouse with time series models like <strong> FBProphet, N-Beats, Temporal Fusion Transformer, ARIMA, XGBoost</strong>. Additionally, I developed a deep learning-based<strong>(RNN)</strong>  system for product search using image recognition with <strong>NearestNeighbor's bruteforce</strong> algorithm.</p>
 
 						<p>Prior to my current role, I served as an <strong>Intern (AI)</strong> at <a href="https://www.uxd.co.jp/"><strong>ULTRA-X BD LIMITED</strong></a>, where I served as the team leader for a group of 5 individuals. Our team was responsible for developing a "Speech to Text" conversion program using the <strong>Kaldi Automatic Speech Recognition (ASR) system</strong>.</p>
 
