updated demand forecast

--- a/index.html
+++ b/index.html
@@ -461,19 +461,7 @@
 
 			<div class="filters-content">
 				<div class="row grid">
-					<div class="single-work col-lg-4 col-md-6 col-sm-12 all data_science wow fadeInUp" data-wow-duration="1s">
-						<div class="relative">
-							<div class="thumb">
-								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="img/work/w4_main.png" alt="">
-							</div>
-							<div class="middle">
-								<h4>Time series<br>forecasting(LSTM)</h4>
-
-							</div>
-							<a class="overlay" href="portfolio-details_demand_pred.html"></a>
-						</div>
-					</div>
+					
 					<div class="single-work col-lg-4 col-md-6 col-sm-12 all data_science wow fadeInUp" data-wow-duration="1s">
 						<div class="relative">
 						  <div class="thumb">
@@ -486,6 +474,21 @@
 						  <a class="overlay" href="portfolio-details_hair_simulation.html"></a>
 						  <div class="project-name-banner text-center">
 							<h5 style="font-size: 18px;">Hair Color Simulation</h5>
+						  </div>
+						</div>
+					  </div>
+					  <div class="single-work col-lg-4 col-md-6 col-sm-12 all data_science wow fadeInUp" data-wow-duration="1s">
+						<div class="relative">
+						  <div class="thumb">
+							<div class="overlay overlay-bg"></div>
+							<img class="image img-fluid" src="img/demand-forecast-thumb.png" alt="Hair Color Simulation Thumbnail">
+						  </div>
+						  <div class="middle">
+							<h4>Product Demand Forecast</h4>
+						  </div>
+						  <a class="overlay" href="portfolio-details_demand_pred.html"></a>
+						  <div class="project-name-banner text-center">
+							<h5 style="font-size: 18px;">Product Demand Forecast</h5>
 						  </div>
 						</div>
 					  </div>
