--- a/portfolio-details_hair_simulation.html
+++ b/portfolio-details_hair_simulation.html
@@ -122,7 +122,8 @@
 			
 								  
 
-							<ul class="list">
+							<ul class="list" style="margin-top: 10px;">
+								<li><b><strong>My Role:</strong> Led the team in <strong>Model Building</strong>, <strong>Dataset Management</strong>, <strong>API Deployment</strong>, and <strong>Frontend Building</strong>.</b></li>
 								<li><b>Used Tools:  Python, Tensorflow, OpenCV, NumPy, Pandas, Matplotlib, Scikit-learn, Flask, REST.</b></li>
 								<li>Project Article: <a href="https://medium.com/@saiful.somum/real-time-hair-color-simulation-c5441d5dcd8c">Medium</a></li>
 							</ul></div>
