--- a/index.html
+++ b/index.html
@@ -461,6 +461,23 @@
 
 			<div class="filters-content">
 				<div class="row grid">
+
+					<div class="single-work col-lg-4 col-md-6 col-sm-12 all data_science wow fadeInUp" data-wow-duration="1s">
+						<div class="relative">
+						  <div class="thumb">
+							<div class="overlay overlay-bg"></div>
+							<img class="image img-fluid" src="img/hair-generator-video-thumbnail.png" alt="Hair Style Generator Thumbnail">
+						  </div>
+						  <div class="middle">
+							<h4>Hair Style Generator</h4>
+						  </div>
+						  <a class="overlay" href="portfolio-details_hair_generator.html"></a>
+						  <div class="project-name-banner text-center">
+							<h5 style="font-size: 18px;">Hair Style Generator</h5>
+						  </div>
+						</div>
+					  </div>
+
 					
 					<div class="single-work col-lg-4 col-md-6 col-sm-12 all data_science wow fadeInUp" data-wow-duration="1s">
 						<div class="relative">
@@ -481,7 +498,7 @@
 						<div class="relative">
 						  <div class="thumb">
 							<div class="overlay overlay-bg"></div>
-							<img class="image img-fluid" src="img/demand-forecast-thumb.png" alt="Hair Color Simulation Thumbnail">
+							<img class="image img-fluid" src="img/demand-forecast-thumb.png" alt="Product Demand Forecast">
 						  </div>
 						  <div class="middle">
 							<h4>Product Demand Forecast</h4>
@@ -492,6 +509,22 @@
 						  </div>
 						</div>
 					  </div>
+					  <div class="single-work col-lg-4 col-md-6 col-sm-12 all data_science wow fadeInUp" data-wow-duration="1s">
+						<div class="relative">
+						  <div class="thumb">
+							<div class="overlay overlay-bg"></div>
+							<img class="image img-fluid" src="img/product-search-thumbnail.png" alt="Product Search by Image">
+						  </div>
+						  <div class="middle">
+							<h4>Product Search by Image</h4>
+						  </div>
+						  <a class="overlay" href="portfolio-details_product_search.html"></a>
+						  <div class="project-name-banner text-center">
+							<h5 style="font-size: 18px;">Product Search by Image</h5>
+						  </div>
+						</div>
+					  </div>
+
 					<div class="single-work col-lg-4 col-md-6 col-sm-12 all data_science wow fadeInUp" data-wow-duration="1s">
 						<div class="relative">
 							<div class="thumb">
@@ -502,7 +535,7 @@
 								<h4>AI based<br>recommendation </h4>
 
 							</div>
-							<a class="overlay" href="portfolio-details_sign_language.html"></a>
+							<a class="overlay" href="portfolio-details_recommendation.html"></a>
 						</div>
 					</div>
 					<div class="single-work col-lg-4 col-md-6 col-sm-12 all data_science wow fadeInUp" data-wow-duration="1s">
