--- a/portfolio-details_hair_generator.html
+++ b/portfolio-details_hair_generator.html
@@ -95,8 +95,11 @@
 					<div class="col-md-6">
 						<div class="left_img">
 						  <figure>
-							<iframe width="600" height="400" src="https://www.youtube.com/embed/e8TbE52Kd0c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-							<figcaption style="margin-left:238px">Fig : Hair Style Generator</figcaption>
+							<video style="border: 10px solid #EEE; margin-left:20px;" width="600" controls controls poster="img/hairstyleGenerator.png">
+							  <source src="videos/Hairstyle-Generator.mp4" type="video/mp4">
+							  Your browser does not support the video tag.
+							</video>
+							<figcaption style="margin-left:238px">Fig : Hairstyle Generator</figcaption>
 						  </figure>
 						</div>
 					  </div>
